--- a/CreateUniversityTables.ipynb
+++ b/CreateUniversityTables.ipynb
@@ -84,21 +84,65 @@
                 "azdata_cell_guid": "028dc5af-5e00-4815-af7a-7bcb76a030aa"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Commands completed successfully."
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.008"
-    },
-    "metadata": {}
-}
-],
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.008"
+                    },
+                    "metadata": {}
+                }
+            ],
             "execution_count": 5
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## VorlesungenBeruhenAuf"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "64a87108-f43a-4fb3-9ded-91eb5ec9fa0a"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE VorlesungenBeruhenAuf (\r\n",
+                "    Vorlesung INT,\r\n",
+                "    BeruhtAuf INT,\r\n",
+                "    CONSTRAINT fk_VorlesungenBeruhenAufVorlesung FOREIGN KEY (Vorlesung) REFERENCES Vorlesungen(VorlesungsID),\r\n",
+                "    CONSTRAINT fk_VorlesungenBeruhenAufBeruhtAuf FOREIGN KEY (BeruhtAuf) REFERENCES Vorlesungen(VorlesungsID)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "fcc41aed-de7f-479d-a4fc-bd70f44d2a58"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.002"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 6
         }
     ]
 }
