--- a/CreateUniversityTables.ipynb
+++ b/CreateUniversityTables.ipynb
@@ -143,6 +143,51 @@
                 }
             ],
             "execution_count": 6
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Assistenten"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f892fd9e-571c-443c-ab14-eab67910076b"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE Assistenten (\r\n",
+                "    AssistentenID INT IDENTITY(1,1) NOT NULL,\r\n",
+                "    Vorname VARCHAR(30) NOT NULL,\r\n",
+                "    Nachname VARCHAR(30) NOT NULL,\r\n",
+                "    Assistiert INT,\r\n",
+                "    CONSTRAINT pk_Assistenten PRIMARY KEY (AssistentenID),\r\n",
+                "    CONSTRAINT fk_AssistentenProfessoren FOREIGN KEY (Assistiert) REFERENCES Professoren(Hoehrsaal)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "47c145d8-75bb-4eb9-be20-d57fc5183aa4"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.008"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 7
         }
     ]
 }
