Added create database to Notebook

--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -16,6 +16,30 @@
         {
             "cell_type": "markdown",
             "source": [
+                "# Create UniversityDB"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "d58925b0-1748-473e-b179-161505d59183"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE DATABASE UniversityDB;\r\n",
+                "GO;\r\n",
+                "USE UniversityDB;"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "b9a7650e-93e6-4f68-b903-d1e7e899e60c",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "## Professoren"
             ],
             "metadata": {
