--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -24,20 +24,6 @@
             "attachments": {}
         },
         {
-            "cell_type": "code",
-            "source": [
-                "CREATE DATABASE UniversityDB;\r\n",
-                "GO;\r\n",
-                "USE UniversityDB;"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "b9a7650e-93e6-4f68-b903-d1e7e899e60c",
-                "language": "sql"
-            },
-            "outputs": [],
-            "execution_count": null
-        },
-        {
             "cell_type": "markdown",
             "source": [
                 "## Professoren"
@@ -74,12 +60,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.004"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -118,12 +104,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.008"
+                        "text/html": "Total execution time: 00:00:00.002"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -166,7 +152,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -206,12 +192,55 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.008"
+                        "text/html": "Total execution time: 00:00:00.002"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 4
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Prüfungen"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "73822262-5be0-4841-9229-8fb013b15a42"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE Pruefungen (\r\n",
+                "    PruefungsID INT,\r\n",
+                "    Termin DATE NOT NULL,\r\n",
+                "    Aufsicht INT,\r\n",
+                "    CONSTRAINT pk_Pruefungen PRIMARY KEY (PruefungsID),\r\n",
+                "    CONSTRAINT fk_PruefungenProfessoren FOREIGN KEY (Aufsicht) REFERENCES Professoren(Hoehrsaal)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f8aa8d4a-e1bd-40a3-8af6-f104ab9c4a9a"
+            },
+            "outputs": [
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Commands completed successfully."
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.007"
+    },
+    "metadata": {}
+}
+],
+            "execution_count": 5
         }
     ]
 }
