--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -214,7 +214,7 @@
             "cell_type": "code",
             "source": [
                 "CREATE TABLE Pruefungen (\r\n",
-                "    PruefungsID INT,\r\n",
+                "    PruefungsID INT NOT NULL,\r\n",
                 "    Termin DATE NOT NULL,\r\n",
                 "    Aufsicht INT,\r\n",
                 "    CONSTRAINT pk_Pruefungen PRIMARY KEY (PruefungsID),\r\n",
@@ -226,21 +226,66 @@
                 "azdata_cell_guid": "f8aa8d4a-e1bd-40a3-8af6-f104ab9c4a9a"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Commands completed successfully."
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.007"
-    },
-    "metadata": {}
-}
-],
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.007"
+                    },
+                    "metadata": {}
+                }
+            ],
             "execution_count": 5
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Studenten"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "5f1c53de-89bc-4d80-a359-afae16d61cb7"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE Studenten (\r\n",
+                "    Matrikelnummer INT NOT NULL,\r\n",
+                "    Vorname VARCHAR(30) NOT NULL,\r\n",
+                "    Nachname VARCHAR(30) NOT NULL,\r\n",
+                "    Studienbeginn DATE NOT NULL,\r\n",
+                "    CONSTRAINT pk_Studenten PRIMARY KEY(Matrikelnummer)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "98503dd7-16d4-4781-a6cc-637676a0b1d5"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.008"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 6
         }
     ]
 }
