--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -286,6 +286,48 @@
                 }
             ],
             "execution_count": 6
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## StudentenZuVorlesung"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "50c28bf9-fa53-4386-8413-2d8dc97b9e4d"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE StudentenZuVorlesung (\r\n",
+                "    Student INT NOT NULL,\r\n",
+                "    Vorlesung INT NOT NULL,\r\n",
+                "    CONSTRAINT fk_StudentenZuVorlesungStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer),\r\n",
+                "    CONSTRAINT fk_StudentenZuVorlesungVorlesung FOREIGN KEY(Vorlesung) REFERENCES Vorlesungen(VorlesungsID)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f0151bad-3ca6-4ecb-9ca7-a68f1d9f7811"
+            },
+            "outputs": [
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Commands completed successfully."
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.009"
+    },
+    "metadata": {}
+}
+],
+            "execution_count": 1
         }
     ]
 }
