--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -51,21 +51,20 @@
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
+                    "output_type": "error",
+                    "evalue": "Msg 2714, Level 16, State 6, Line 1\r\nThere is already an object named 'Professoren' in the database.",
+                    "ename": "",
+                    "traceback": []
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.004"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -236,7 +235,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.007"
+                        "text/html": "Total execution time: 00:00:00.008"
                     },
                     "metadata": {}
                 }
@@ -313,21 +312,66 @@
                 "azdata_cell_guid": "f0151bad-3ca6-4ecb-9ca7-a68f1d9f7811"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Commands completed successfully."
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.009"
-    },
-    "metadata": {}
-}
-],
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.009"
+                    },
+                    "metadata": {}
+                }
+            ],
             "execution_count": 1
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## StudentenZuPrüfungen"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f554a71c-2262-4e9a-8918-a2fcb2813c10"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE TABLE StudentenZuPruefungen (\r\n",
+                "    Student INT NOT NULL,\r\n",
+                "    Pruefung INT NOT NULL,\r\n",
+                "    Note DECIMAL(2, 1),\r\n",
+                "    CONSTRAINT fk_StudentenZuPruefungenStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer),\r\n",
+                "    CONSTRAINT fk_StudentenZuPruefungenPruefungen FOREIGN KEY(Pruefung) REFERENCES Pruefungen(PruefungsID)\r\n",
+                ")"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "c75cd425-a095-408e-b8f0-e0cf9fcc647a"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.008"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 6
         }
     ]
 }
