--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -51,20 +51,21 @@
             },
             "outputs": [
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 2714, Level 16, State 6, Line 1\r\nThere is already an object named 'Professoren' in the database.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.052"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -103,12 +104,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 2
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -151,7 +152,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 3
+            "execution_count": 9
         },
         {
             "cell_type": "markdown",
@@ -191,12 +192,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -235,12 +236,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.008"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
@@ -279,12 +280,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.008"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -303,7 +304,7 @@
                 "CREATE TABLE StudentenZuVorlesung (\r\n",
                 "    Student INT NOT NULL,\r\n",
                 "    Vorlesung INT NOT NULL,\r\n",
-                "    CONSTRAINT fk_StudentenZuVorlesungStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer),\r\n",
+                "    CONSTRAINT fk_StudentenZuVorlesungStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer) ON DELETE CASCADE,\r\n",
                 "    CONSTRAINT fk_StudentenZuVorlesungVorlesung FOREIGN KEY(Vorlesung) REFERENCES Vorlesungen(VorlesungsID)\r\n",
                 ")"
             ],
@@ -322,12 +323,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.009"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 13
         },
         {
             "cell_type": "markdown",
@@ -366,12 +367,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.008"
+                        "text/html": "Total execution time: 00:00:00.003"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 14
         }
     ]
 }
