--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -60,12 +60,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.052"
+                        "text/html": "Total execution time: 00:00:00.003"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -104,12 +104,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.005"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 8
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -134,7 +134,8 @@
             ],
             "metadata": {
                 "language": "sql",
-                "azdata_cell_guid": "fcc41aed-de7f-479d-a4fc-bd70f44d2a58"
+                "azdata_cell_guid": "fcc41aed-de7f-479d-a4fc-bd70f44d2a58",
+                "tags": []
             },
             "outputs": [
                 {
@@ -147,12 +148,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 9
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -197,7 +198,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 10
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -236,12 +237,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.002"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 11
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
@@ -280,12 +281,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.002"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 12
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -328,7 +329,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 13
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -367,12 +368,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.003"
+                        "text/html": "Total execution time: 00:00:00.001"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 14
+            "execution_count": 8
         }
     ]
 }
