--- a/InsertUniversityData.ipynb
+++ b/InsertUniversityData.ipynb
@@ -41,8 +41,23 @@
                 "azdata_cell_guid": "639713b4-a7eb-4298-9157-d7159b7e7e21",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(7 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.011"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
@@ -86,180 +101,59 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "(22 rows affected)"
+                        "text/html": "Total execution time: 00:00:00.010"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 6
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Assistenten"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "56eea01e-ee70-4cd7-830f-f302d629a480"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "INSERT INTO Assistenten(Vorname, Nachname, Assistiert) VALUES\r\n",
+                "('Lionel', 'Messi', NULL),\r\n",
+                "('Xherdan', 'Shaqiri', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Nikola')),\r\n",
+                "('Sami', 'Khedira', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Peter')),\r\n",
+                "('Cristiano', 'Ronaldo', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Peter')),\r\n",
+                "('Wayne', 'Rooney', NULL),\r\n",
+                "('Arjen', 'Robben', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Jacobus')),\r\n",
+                "('Andrea', 'Pirlo', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Albert')),\r\n",
+                "('Robert', 'Lewandowski', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Peter')),\r\n",
+                "('Luis', 'Suàrez', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Wilhelm Conrad')),\r\n",
+                "('Alexis', 'Sanchez', (SELECT Hoehrsaal FROM Professoren WHERE Vorname = 'Marie'));"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "efadfe7f-20c8-468c-9e4d-448f04234642",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.022"
+                        "text/html": "Total execution time: 00:00:00.007"
                     },
                     "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 3,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "VorlesungsID"
-                                    },
-                                    {
-                                        "name": "Professor"
-                                    },
-                                    {
-                                        "name": "Titel"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "VorlesungsID": "1",
-                                    "Professor": "8",
-                                    "Titel": "Ethik"
-                                },
-                                {
-                                    "VorlesungsID": "2",
-                                    "Professor": "13",
-                                    "Titel": "Elektrotechnik"
-                                },
-                                {
-                                    "VorlesungsID": "3",
-                                    "Professor": "8",
-                                    "Titel": "Sprachtheorie"
-                                },
-                                {
-                                    "VorlesungsID": "4",
-                                    "Professor": "10",
-                                    "Titel": "Radiologie"
-                                },
-                                {
-                                    "VorlesungsID": "5",
-                                    "Professor": "14",
-                                    "Titel": "Allgemeine Relativitätstheorie"
-                                },
-                                {
-                                    "VorlesungsID": "6",
-                                    "Professor": "14",
-                                    "Titel": "Quantenphysik"
-                                },
-                                {
-                                    "VorlesungsID": "7",
-                                    "Professor": "3",
-                                    "Titel": "Kinetik"
-                                },
-                                {
-                                    "VorlesungsID": "8",
-                                    "Professor": "8",
-                                    "Titel": "Literaturgeschichte"
-                                },
-                                {
-                                    "VorlesungsID": "9",
-                                    "Professor": "14",
-                                    "Titel": "Astrophysik"
-                                },
-                                {
-                                    "VorlesungsID": "10",
-                                    "Professor": "3",
-                                    "Titel": "Biochemie"
-                                },
-                                {
-                                    "VorlesungsID": "11",
-                                    "Professor": "12",
-                                    "Titel": "Physikalische Chemie"
-                                },
-                                {
-                                    "VorlesungsID": "12",
-                                    "Professor": "8",
-                                    "Titel": "Ethik"
-                                },
-                                {
-                                    "VorlesungsID": "13",
-                                    "Professor": "13",
-                                    "Titel": "Elektrotechnik"
-                                },
-                                {
-                                    "VorlesungsID": "14",
-                                    "Professor": "8",
-                                    "Titel": "Sprachtheorie"
-                                },
-                                {
-                                    "VorlesungsID": "15",
-                                    "Professor": "10",
-                                    "Titel": "Radiologie"
-                                },
-                                {
-                                    "VorlesungsID": "16",
-                                    "Professor": "14",
-                                    "Titel": "Allgemeine Relativitätstheorie"
-                                },
-                                {
-                                    "VorlesungsID": "17",
-                                    "Professor": "14",
-                                    "Titel": "Quantenphysik"
-                                },
-                                {
-                                    "VorlesungsID": "18",
-                                    "Professor": "3",
-                                    "Titel": "Kinetik"
-                                },
-                                {
-                                    "VorlesungsID": "19",
-                                    "Professor": "8",
-                                    "Titel": "Literaturgeschichte"
-                                },
-                                {
-                                    "VorlesungsID": "20",
-                                    "Professor": "14",
-                                    "Titel": "Astrophysik"
-                                },
-                                {
-                                    "VorlesungsID": "21",
-                                    "Professor": "3",
-                                    "Titel": "Biochemie"
-                                },
-                                {
-                                    "VorlesungsID": "22",
-                                    "Professor": "12",
-                                    "Titel": "Physikalische Chemie"
-                                }
-                            ]
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>VorlesungsID</th><th>Professor</th><th>Titel</th></tr>",
-                            "<tr><td>1</td><td>8</td><td>Ethik</td></tr>",
-                            "<tr><td>2</td><td>13</td><td>Elektrotechnik</td></tr>",
-                            "<tr><td>3</td><td>8</td><td>Sprachtheorie</td></tr>",
-                            "<tr><td>4</td><td>10</td><td>Radiologie</td></tr>",
-                            "<tr><td>5</td><td>14</td><td>Allgemeine Relativitätstheorie</td></tr>",
-                            "<tr><td>6</td><td>14</td><td>Quantenphysik</td></tr>",
-                            "<tr><td>7</td><td>3</td><td>Kinetik</td></tr>",
-                            "<tr><td>8</td><td>8</td><td>Literaturgeschichte</td></tr>",
-                            "<tr><td>9</td><td>14</td><td>Astrophysik</td></tr>",
-                            "<tr><td>10</td><td>3</td><td>Biochemie</td></tr>",
-                            "<tr><td>11</td><td>12</td><td>Physikalische Chemie</td></tr>",
-                            "<tr><td>12</td><td>8</td><td>Ethik</td></tr>",
-                            "<tr><td>13</td><td>13</td><td>Elektrotechnik</td></tr>",
-                            "<tr><td>14</td><td>8</td><td>Sprachtheorie</td></tr>",
-                            "<tr><td>15</td><td>10</td><td>Radiologie</td></tr>",
-                            "<tr><td>16</td><td>14</td><td>Allgemeine Relativitätstheorie</td></tr>",
-                            "<tr><td>17</td><td>14</td><td>Quantenphysik</td></tr>",
-                            "<tr><td>18</td><td>3</td><td>Kinetik</td></tr>",
-                            "<tr><td>19</td><td>8</td><td>Literaturgeschichte</td></tr>",
-                            "<tr><td>20</td><td>14</td><td>Astrophysik</td></tr>",
-                            "<tr><td>21</td><td>3</td><td>Biochemie</td></tr>",
-                            "<tr><td>22</td><td>12</td><td>Physikalische Chemie</td></tr>",
-                            "</table>"
-                        ]
-                    }
                 }
             ],
-            "execution_count": 3
+            "execution_count": 7
         }
     ]
 }
